Fixed some layout issues

--- a/scss/moove/_course.scss
+++ b/scss/moove/_course.scss
@@ -1,7 +1,4 @@
 #page-course-view-topics {
-    #completionprogressid {
-        margin-right: 3em;
-    }
     .course-content {
         .topics {
             #section-0 {
@@ -10,9 +7,6 @@
             .section {
                 border: none;
 
-                .activity {
-                    margin: 0 2em;
-                }
                 .activity.label {
                     margin: 0;
                     .mod-indent-outer {
@@ -121,19 +115,19 @@
             }
         }
 
-        .single-section {
-            .sectionname {
-                border-color: $m-dark-bg-hover;
-                border-style: solid;
-                border-width: 5px 5px 5px 0;
-                background: #fff;
-                margin: 0 0 0 -25px;
-                padding: 12px 15px 5px 15px;
-                letter-spacing: .1em;
-                text-transform: uppercase;
-                color: $brand-primary;
-                font-weight: 700;
-            }
+        .single-section .sectionname,
+        .section .sectionname {
+            border-color: $m-dark-bg-hover;
+            border-style: solid;
+            border-width: 5px 5px 5px 0;
+            background: #fff;
+            margin: 0 0 0 -25px;
+            padding: 12px 15px 5px 15px;
+            letter-spacing: .1em;
+            text-transform: uppercase;
+            color: $brand-primary;
+            font-weight: 700;
+            text-align: center;
         }
     }
     .section-navigation.mdl-bottom {
